# RoPaSci

./: .gitignore  CMakeLists.txt  LICENSE  README.md  RoPaSci.sln  RoPaSci.vcxproj  RoPaSci.vcxproj.filters  THIRDPARTY
Data/audio/: explosion.flac  game_over.flac  swap.flac
Data/models/: GameBlock.blend
Data/pgm/: bomb.pgm
Data/shaders/: Basic2D.fs  Basic2D.vs  ShadedModel.fs  ShadedModel.vs  Test.fs  Test.vs  Textured.fs  Textured.vs  TexturedColored.fs  TexturedColored.vs  TexturedModel.fs
Data/textures/: Thumbs.db  main_io.psd  ui_background.dds
Depends/include/gli/core/: image.inl
Depends/lib/elf64/: libtbb_debug.so.2  libtbb_preview.so.2  libtbb_preview_debug.so.2  libtbbmalloc_debug.so.2  libtbbmalloc_proxy.so.2  libtbbmalloc_proxy_debug.so.2
Depends/lib/elf64/irml/: libirml.so.1  libirml_debug.so.1
Depends/lib/win32/: freeglut_static.lib  freeglut_staticd.lib  freetype.lib  freetyped.lib  glew32s.lib  glew32sd.lib  glfw3.lib  glfw3d.lib  sfml-audio-s.lib  sfml-system-s.lib  sfml-system-sd.lib  tbb.def  tbb.lib  tbb_debug.lib  tbb_preview.lib  tbb_preview_debug.lib  tbbmalloc.def  tbbmalloc.lib  tbbmalloc_debug.lib  tbbmalloc_proxy.lib  tbbmalloc_proxy_debug.lib  tbbproxy.lib  tbbproxy_debug.lib
Depends/lib/win32/irml/: irml.lib  irml_debug.lib
Depends/lib/win64/: freeglut_static.lib  freeglut_staticd.lib  freetype.lib  freetyped.lib  glew32s.lib  glew32sd.lib  glfw3.lib  glfw3d.lib  sfml-audio-s.lib  sfml-system-s.lib  sfml-system-sd.lib  tbb.def  tbb.lib  tbb_debug.lib  tbb_preview.lib  tbb_preview_debug.lib  tbbmalloc.def  tbbmalloc.lib  tbbmalloc_debug.lib  tbbmalloc_proxy.lib  tbbmalloc_proxy_debug.lib  tbbproxy.lib  tbbproxy_debug.lib
Depends/lib/win64/irml/: irml.lib  irml_debug.lib
Src/: Application.cpp  Application.h  RoPaSci.cpp
Src/Game/: Main.cpp  Main.h
Src/Game/Entities/: BlockEntity.cpp  BlockEntity.h  GridEntity.cpp  GridEntity.h  IEntity.h  LifeEntity.cpp  LifeEntity.h  ScoringEntity.cpp  ScoringEntity.h
Src/Managers/: AudioManager.cpp  AudioManager.h  CameraManager.cpp  CameraManager.h  IManager.h  InputManager.cpp  InputManager.h  ModelManager.cpp  ModelManager.h  SceneManager.cpp  SceneManager.h  ShaderManager.cpp  ShaderManager.h  SimulationManager.cpp  SimulationManager.h  TaskManager.cpp  TaskManager.h  TextureManager.cpp  TextureManager.h  TimingManager.cpp  TimingManager.h
Src/Managers/Input/: KeyAction.h  MouseAction.h
Src/Managers/Model/: ModelData.h
Src/Managers/Shader/: Program.h
Src/Managers/Task/: GenericTask.h  TBBContextID.cpp  TBBContextID.h  TBBTaskSet.h
Src/Misc/: StdAfx.h
Src/Rendering/: DebugRenderer.cpp  DebugRenderer.h  IRenderer.h  MainRenderer.cpp  MainRenderer.h  UIRenderer.cpp  UIRenderer.h
Src/Rendering/Objects/: Model.cpp  Model.h
Src/Rendering/Textures/: CharacterTexture.cpp  CharacterTexture.h  ITexture.h  Texture.cpp  Texture.h  TextureCreateDesc.h
Src/Util/: AtomicOps.h  EasyLock.h  EngineTimer.cpp  EngineTimer.h  Log.cpp  Log.h  ReaderWriterQueue.h  SpinLock.h  Utils.cpp  Utils.h
Src/VFS/: FSBackend.h  FSFile.h  FileSystem.cpp  FileSystem.h
Src/VFS/Backends/: PosixBackend.cpp  PosixBackend.h  WinBackend.cpp  WinBackend.h
Src/VFS/Files/: NativeFile.cpp  NativeFile.h
